<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SafeGuard</string>
    <string name="tagline">Your Safety Companion</string>
    <string name="sos">SOS</string>
    <string name="hold_for_emergency">Hold for Emergency</string>
    <string name="sos_hint">Press and hold to send emergency alert to your trusted contacts</string>
    <string name="safety_status">Safety Status</string>
    <string name="status_active">Active</string>
    <string name="emergency_contacts_count">%d Emergency Contacts</string>
    <string name="location_services_enabled">Location Services: Enabled</string>
    <string name="location_services_disabled">Location Services: Disabled</string>
    <string name="nav_home">Home</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_location">Location</string>
    <string name="nav_fake_call">Fake Call</string>
    <string name="nav_tips">Tips</string>
    <string name="nav_checkin">Check-In</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="emergency_contacts_subtitle">Add trusted contacts who will be notified in case of emergency</string>
    <string name="add_emergency_contact">Add Emergency Contact</string>
    <string name="no_emergency_contacts">No Emergency Contacts</string>
    <string name="no_contacts_hint">Add trusted contacts to receive alerts during emergencies</string>
    <string name="caller_name">Caller Name</string>
    <string name="call_delay">Call Delay</string>
    <string name="start_fake_call">Start Fake Call</string>
    <string name="fake_call_title">Fake Call</string>
    <string name="fake_call_subtitle">Simulate a phone call to help you exit uncomfortable situations</string>
    <string name="how_it_works">How it works</string>
    <string name="safety_tips">Safety Tips</string>
    <string name="safety_tips_subtitle">Essential safety information and emergency resources</string>
    <string name="in_immediate_danger">In immediate danger?</string>
    <string name="immediate_danger_msg">Call 112 or your local emergency number immediately. Your safety is the top priority.</string>
    <string name="check_in_title">Check-In</string>
    <string name="check_in_subtitle">Set a safety timer. If you don\'t check in, your contacts will be alerted.</string>
    <string name="location_title">Live Location</string>
    <string name="location_subtitle">Share your real-time location with emergency contacts</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="sos_sent">SOS alert sent to your emergency contacts!</string>
    <string name="no_contacts_sos">No emergency contacts added yet.</string>
    <string name="permission_required">Permission required</string>
    <string name="start_sharing">Start Sharing</string>
    <string name="stop_sharing">Stop Sharing</string>
    <string name="sharing_active">Sharing Active</string>
    <string name="sharing_inactive">Not Sharing</string>
    <string name="set_timer">Set Timer</string>
    <string name="im_safe">I\'m Safe</string>
    <string name="timer_active">Timer Active</string>
    <string name="timer_inactive">Timer Inactive</string>
    <string name="select_duration">Select Duration</string>
</resources>
